<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:fontFamily="sans-serif-black"
            android:maxWidth="350dp"
            android:maxHeight="200dp"
            android:minWidth="350dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:scrollbarSize="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@color/grey"
            android:scrollbars="vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#B43D4240"
            android:fontFamily="sans-serif-medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_backspace"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:iconPadding="0dp"
            tools:text="←">

        </Button>
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral20"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp">

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_2"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_3"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_plus"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp">

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_4"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_5"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_6"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_minus"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp">

            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_7"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_8"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_9"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_devide"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp">

            <Button
                android:id="@+id/button_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="sans-serif-medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_point"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="sans-serif-medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#5E5C5C"
                android:fontFamily="sans-serif-medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="@string/button_equal"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button_multi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:backgroundTint="#B43D4240"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:text="Х"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:iconPadding="0dp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>